Navigation z-index correction

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,6 +1,6 @@
 .home-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     width: 90%;
     height: 100vh;
     align-items: center;
@@ -95,7 +95,7 @@
 
 @media  screen and (max-width: 700px) {
     .home-container{
-        flex-direction: column-reverse;
+        flex-direction: column;
         width: 90%;
         padding-top: 5rem;
         padding-bottom: 5rem;
@@ -107,7 +107,8 @@
     }
     
     .home-img-box{
-        padding: 0;
+        padding-top: 1vw;
+        padding-bottom: 0;
         z-index: 2;
     }
     
